# argweaver

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  README+s.md  README.md  argweavers.py  build.rs  pyproject.toml
.github/workflows/: CI.yml  documentation.yml
R/: README
R/argweaver/: DESCRIPTION  LICENSE  NAMESPACE
R/argweaver/R/: getTimes.R  leafTrace.R  misc.R  multiHist.R  plotBw.R  plotSites.R  plotStats.R  plotTraces.R  plotTrees.R  popModel.R  psmc.R  readArgSummary.R  readSites.R  readStatsFile.R  writeSites.R
R/argweaver/man/: drawTree.Rd  getCols.Rd  getHaps.Rd  getLogFile.Rd  getOuterPopPath.Rd  getPathsFromLogFile.Rd  getRootNode.Rd  getTimes.Rd  getTimesFromLogFile.Rd  getTreeDepth.Rd  makeTransparent.Rd  meanColor.Rd  multiHist.Rd  multiPopsizeFileFromPsmc.Rd  plotBw.Rd  plotLeafTrace.Rd  plotPsmc.Rd  plotSites.Rd  plotStats.Rd  plotTraces.Rd  plotTree.Rd  plotTrees.Rd  plotTreesAtSites.Rd  plotTreesFromBed.Rd  postorder.arg.Rd  postorderRec.Rd  probCoalCounts.Rd  psmcToPopsize.Rd  readArgSummary.Rd  readLeafTrace.Rd  readPopFile.Rd  readPopModel.Rd  readPsmc.Rd  readSites.Rd  readStatsFile.Rd  scalePopModel.Rd  subSites.Rd  writeSites.Rd
argweaver/: __init__.py  argweaverc.py  bin.py  plot.py  r.py  s.pyi  sim.py  utils.py
argweaver/io/: __init__.py  bed.py
argweaver/scripts/: smc2bed.py  smc2bed_all.py
argweavers/: __init__.py  arg.py  argweavers.pyi  bin.py  r.py  smc.py  utils.py
argweavers/io/: bed.py
argweavers/scripts/: smc2bed.py  smc2bed_all.py
benches/: my_benchmark.rs
doc/: argweaver-d-manual.html
docs/: architecture.dot  conf.py  index.md  installation.md
docs/rapidocs/: argweaver.md  index.rst
docs/rapidocs/argweaver/: drawTree.md  getCols.md  getHaps.md  getLogFile.md  getOuterPopPath.md  getPathsFromLogFile.md  getRootNode.md  getTimes.md  getTimesFromLogFile.md  getTreeDepth.md  makeTransparent.md  meanColor.md  multiHist.md  multiPopsizeFileFromPsmc.md  plotBw.md  plotLeafTrace.md  plotPsmc.md  plotSites.md  plotStats.md  plotTraces.md  plotTree.md  plotTrees.md  plotTreesAtSites.md  plotTreesFromBed.md  postorder.arg.md  postorderRec.md  probCoalCounts.md  psmcToPopsize.md  readArgSummary.md  readLeafTrace.md  readPopFile.md  readPopModel.md  readPsmc.md  readSites.md  readStatsFile.md  scalePopModel.md  subSites.md  writeSites.md
src/: Tree.cpp  Tree.h  arg-likelihood.cpp  arg-sample.cpp  arg-summarize.cpp  binaries.rs  common.h  compress.h  de.rs  emit.cpp  emit.h  est_popsize.cpp  est_popsize.h  fs.rs  io.rs  lib.rs  local_tree.cpp  local_tree.h  logging.cpp  matrices.cpp  matrices.h  mcmcmc.cpp  mcmcmc.h  model.cpp  model.h  pop_model.cpp  pop_model.h  popsize-post.cpp  recomb.cpp  sample_arg.cpp  sample_arg.h  sample_thread.cpp  sample_thread.h  sequences.cpp  sequences.h  sites.rs  smc2bed.cpp  states.cpp  states.h  thread.cpp  (+3 more)
src/argweaver/: ConfigParam.h  MultiArray.h  Tree.cpp  Tree.h  coal_records.cpp  coal_records.h  common.cpp  common.h  compress.h  emit.cpp  emit.h  est_popsize.cpp  est_popsize.h  ffi.h  local_tree.cpp  local_tree.h  logging.cpp  logging.h  matrices.cpp  matrices.h  mcmcmc.h  model.cpp  model.h  parsing.cpp  parsing.h  pop_model.cpp  pop_model.h  recomb.cpp  recomb.h  sample_arg.cpp  sample_arg.h  sample_thread.cpp  sequences.cpp  sequences.h  states.cpp  states.h  tabix.cpp  thread.cpp  thread.h  total_prob.cpp  (+5 more)
src/ser/: mod.rs  stats.rs
src/tests/: mod.rs
tests/: conftest.py  test_basic.py  test_bin.py  test_io.py  test_plot.py  test_plot_tree.py  test_r.py  test_scripts.py  test_sites.py  test_smc.py  test_utils.py
