[package]
name = "argweavers"
version = "0.9.0"
edition = "2021"
authors = ["Tang Ziya <tcztzy@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "argweavers"
crate-type = ["lib", "cdylib"]

[dependencies]
autocxx = "0.26.0"
clap = { version = "4.4.18", features = ["derive", "cargo"] }
csv = "1.3.0"
cxx = "1.0.115"
flate2 = "1.0.28"
nom = "7.1.3"
polars = { version = "0.37.0", features = ["lazy"] }
pyo3 = { version = "0.20", features = ["abi3-py38", "extension-module", "multiple-pymethods"], optional = true }
pyo3-polars = { version = "0.11.1", optional = true }
serde = { version = "1.0.195", features = ["derive"] }
tempfile = "3.9.0"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "my_benchmark"
harness = false

[features]
default = []
extension-module = [
    "dep:pyo3",
    "dep:pyo3-polars",
    "dep:pyo3-build-config",
]

[build-dependencies]
autocxx-build = "0.26.0"
cmake = "0.1"
glob = "0.3.1"
miette = { version = "5.10.0", features = ["fancy"] }
pyo3-build-config = { version = "0.20.2", features = ["abi3-py38"], optional = true }
