[package]
name = "argweavers"
version = "1.0.0"
edition = "2021"
authors = ["Tang Ziya <tcztzy@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "argweavers"
crate-type = ["lib", "cdylib"]

[dependencies]
autocxx = "0.26.0"
bio = { version = "1.5.0", features = ["phylogeny"] }
clap = { version = "4.5.1", features = ["derive", "cargo"] }
csv = "1.3.0"
cxx = "1.0.117"
flate2 = "1.0.28"
libc = "0.2.153"
log = "0.4.20"
log4rs = "1.3.0"
nom = "7.1.3"
polars = { version = "0.37.0", features = ["lazy"] }
pyo3 = { version = "0.20", features = ["abi3-py38", "extension-module", "multiple-pymethods"], optional = true }
pyo3-polars = { version = "0.11.3", optional = true }
rust-htslib = { version = "0.46.0", features = ["libdeflate"] }
serde = { version = "1.0.197", features = ["derive"] }
tempfile = "3.10.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "my_benchmark"
harness = false

[features]
default = []
extension-module = [
    "dep:pyo3",
    "dep:pyo3-polars",
    "dep:pyo3-build-config",
]

[build-dependencies]
autocxx-build = "0.26.0"
glob = "0.3.1"
pyo3-build-config = { version = "0.20.3", features = ["abi3-py38"], optional = true }
